fix home items placing on mobiles

--- a/src/header/_1-1-home.scss
+++ b/src/header/_1-1-home.scss
@@ -37,7 +37,7 @@
     &__wrapper {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
       justify-content: center;
     }
 
