--- a/src/header/_1-1-home_media.scss
+++ b/src/header/_1-1-home_media.scss
@@ -4,6 +4,7 @@
       &__wrapper {
         flex-wrap: wrap;
         flex-direction: row;
+        align-items: flex-start;
       }
       &__item {
         width: calc(100% / 2 - 20px);
