--- a/src/stages/_stages__media.scss
+++ b/src/stages/_stages__media.scss
@@ -16,7 +16,6 @@
       &_main-block{
         &_text{
           line-height: 1.35;
-          margin-left: 75px;
           margin-top: 20px;
         }
         &_title{
